// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`margin mb Generates the correct classes for margin bottom for the 0 unit 1`] = `
Array [
  "mb-0",
]
`;

exports[`margin mb Generates the correct classes for margin bottom for the 1 unit 1`] = `
Array [
  "mb-1",
]
`;

exports[`margin mb Generates the correct classes for margin bottom for the 1/2 unit 1`] = `
Array [
  "mb-half",
]
`;

exports[`margin mb Generates the correct classes for margin bottom for the 1/4 unit 1`] = `
Array [
  "mb-quarter",
]
`;

exports[`margin mb Generates the correct classes for margin bottom for the 1/8 unit 1`] = `
Array [
  "mb-eighth",
]
`;

exports[`margin mb Generates the correct classes for margin bottom for the 2 unit 1`] = `
Array [
  "mb-2",
]
`;

exports[`margin mb Generates the correct classes for margin bottom for the 3 unit 1`] = `
Array [
  "mb-3",
]
`;

exports[`margin mb Generates the correct classes for margin bottom for the 4 unit 1`] = `
Array [
  "mb-4",
]
`;

exports[`margin ml Generates the correct classes for margin left for the 0 unit 1`] = `
Array [
  "ml-0",
]
`;

exports[`margin ml Generates the correct classes for margin left for the 1 unit 1`] = `
Array [
  "ml-1",
]
`;

exports[`margin ml Generates the correct classes for margin left for the 1/2 unit 1`] = `
Array [
  "ml-half",
]
`;

exports[`margin ml Generates the correct classes for margin left for the 1/4 unit 1`] = `
Array [
  "ml-quarter",
]
`;

exports[`margin ml Generates the correct classes for margin left for the 1/8 unit 1`] = `
Array [
  "ml-eighth",
]
`;

exports[`margin ml Generates the correct classes for margin left for the 2 unit 1`] = `
Array [
  "ml-2",
]
`;

exports[`margin ml Generates the correct classes for margin left for the 3 unit 1`] = `
Array [
  "ml-3",
]
`;

exports[`margin ml Generates the correct classes for margin left for the 4 unit 1`] = `
Array [
  "ml-4",
]
`;

exports[`margin mr Generates the correct classes for margin right for the 0 unit 1`] = `
Array [
  "mr-0",
]
`;

exports[`margin mr Generates the correct classes for margin right for the 1 unit 1`] = `
Array [
  "mr-1",
]
`;

exports[`margin mr Generates the correct classes for margin right for the 1/2 unit 1`] = `
Array [
  "mr-half",
]
`;

exports[`margin mr Generates the correct classes for margin right for the 1/4 unit 1`] = `
Array [
  "mr-quarter",
]
`;

exports[`margin mr Generates the correct classes for margin right for the 1/8 unit 1`] = `
Array [
  "mr-eighth",
]
`;

exports[`margin mr Generates the correct classes for margin right for the 2 unit 1`] = `
Array [
  "mr-2",
]
`;

exports[`margin mr Generates the correct classes for margin right for the 3 unit 1`] = `
Array [
  "mr-3",
]
`;

exports[`margin mr Generates the correct classes for margin right for the 4 unit 1`] = `
Array [
  "mr-4",
]
`;

exports[`margin mt Generates the correct classes for margin top for the 0 unit 1`] = `
Array [
  "mt-0",
]
`;

exports[`margin mt Generates the correct classes for margin top for the 1 unit 1`] = `
Array [
  "mt-1",
]
`;

exports[`margin mt Generates the correct classes for margin top for the 1/2 unit 1`] = `
Array [
  "mt-half",
]
`;

exports[`margin mt Generates the correct classes for margin top for the 1/4 unit 1`] = `
Array [
  "mt-quarter",
]
`;

exports[`margin mt Generates the correct classes for margin top for the 1/8 unit 1`] = `
Array [
  "mt-eighth",
]
`;

exports[`margin mt Generates the correct classes for margin top for the 2 unit 1`] = `
Array [
  "mt-2",
]
`;

exports[`margin mt Generates the correct classes for margin top for the 3 unit 1`] = `
Array [
  "mt-3",
]
`;

exports[`margin mt Generates the correct classes for margin top for the 4 unit 1`] = `
Array [
  "mt-4",
]
`;

exports[`margin mx Generates the correct classes for margin x axis for the 0 unit 1`] = `
Array [
  "mx-0",
]
`;

exports[`margin mx Generates the correct classes for margin x axis for the 1 unit 1`] = `
Array [
  "mx-1",
]
`;

exports[`margin mx Generates the correct classes for margin x axis for the 1/2 unit 1`] = `
Array [
  "mx-half",
]
`;

exports[`margin mx Generates the correct classes for margin x axis for the 1/4 unit 1`] = `
Array [
  "mx-quarter",
]
`;

exports[`margin mx Generates the correct classes for margin x axis for the 1/8 unit 1`] = `
Array [
  "mx-eighth",
]
`;

exports[`margin mx Generates the correct classes for margin x axis for the 2 unit 1`] = `
Array [
  "mx-2",
]
`;

exports[`margin mx Generates the correct classes for margin x axis for the 3 unit 1`] = `
Array [
  "mx-3",
]
`;

exports[`margin mx Generates the correct classes for margin x axis for the 4 unit 1`] = `
Array [
  "mx-4",
]
`;

exports[`margin my Generates the correct classes for margin y axis for the 0 unit 1`] = `
Array [
  "my-0",
]
`;

exports[`margin my Generates the correct classes for margin y axis for the 1 unit 1`] = `
Array [
  "my-1",
]
`;

exports[`margin my Generates the correct classes for margin y axis for the 1/2 unit 1`] = `
Array [
  "my-half",
]
`;

exports[`margin my Generates the correct classes for margin y axis for the 1/4 unit 1`] = `
Array [
  "my-quarter",
]
`;

exports[`margin my Generates the correct classes for margin y axis for the 1/8 unit 1`] = `
Array [
  "my-eighth",
]
`;

exports[`margin my Generates the correct classes for margin y axis for the 2 unit 1`] = `
Array [
  "my-2",
]
`;

exports[`margin my Generates the correct classes for margin y axis for the 3 unit 1`] = `
Array [
  "my-3",
]
`;

exports[`margin my Generates the correct classes for margin y axis for the 4 unit 1`] = `
Array [
  "my-4",
]
`;

exports[`padding pb Generates the correct classes for padding bottom for the 0 unit 1`] = `
Array [
  "pb-0",
]
`;

exports[`padding pb Generates the correct classes for padding bottom for the 1 unit 1`] = `
Array [
  "pb-1",
]
`;

exports[`padding pb Generates the correct classes for padding bottom for the 1/2 unit 1`] = `
Array [
  "pb-half",
]
`;

exports[`padding pb Generates the correct classes for padding bottom for the 1/4 unit 1`] = `
Array [
  "pb-quarter",
]
`;

exports[`padding pb Generates the correct classes for padding bottom for the 1/8 unit 1`] = `
Array [
  "pb-eighth",
]
`;

exports[`padding pb Generates the correct classes for padding bottom for the 2 unit 1`] = `
Array [
  "pb-2",
]
`;

exports[`padding pb Generates the correct classes for padding bottom for the 3 unit 1`] = `
Array [
  "pb-3",
]
`;

exports[`padding pb Generates the correct classes for padding bottom for the 4 unit 1`] = `
Array [
  "pb-4",
]
`;

exports[`padding pl Generates the correct classes for padding left for the 0 unit 1`] = `
Array [
  "pl-0",
]
`;

exports[`padding pl Generates the correct classes for padding left for the 1 unit 1`] = `
Array [
  "pl-1",
]
`;

exports[`padding pl Generates the correct classes for padding left for the 1/2 unit 1`] = `
Array [
  "pl-half",
]
`;

exports[`padding pl Generates the correct classes for padding left for the 1/4 unit 1`] = `
Array [
  "pl-quarter",
]
`;

exports[`padding pl Generates the correct classes for padding left for the 1/8 unit 1`] = `
Array [
  "pl-eighth",
]
`;

exports[`padding pl Generates the correct classes for padding left for the 2 unit 1`] = `
Array [
  "pl-2",
]
`;

exports[`padding pl Generates the correct classes for padding left for the 3 unit 1`] = `
Array [
  "pl-3",
]
`;

exports[`padding pl Generates the correct classes for padding left for the 4 unit 1`] = `
Array [
  "pl-4",
]
`;

exports[`padding pr Generates the correct classes for padding right for the 0 unit 1`] = `
Array [
  "pr-0",
]
`;

exports[`padding pr Generates the correct classes for padding right for the 1 unit 1`] = `
Array [
  "pr-1",
]
`;

exports[`padding pr Generates the correct classes for padding right for the 1/2 unit 1`] = `
Array [
  "pr-half",
]
`;

exports[`padding pr Generates the correct classes for padding right for the 1/4 unit 1`] = `
Array [
  "pr-quarter",
]
`;

exports[`padding pr Generates the correct classes for padding right for the 1/8 unit 1`] = `
Array [
  "pr-eighth",
]
`;

exports[`padding pr Generates the correct classes for padding right for the 2 unit 1`] = `
Array [
  "pr-2",
]
`;

exports[`padding pr Generates the correct classes for padding right for the 3 unit 1`] = `
Array [
  "pr-3",
]
`;

exports[`padding pr Generates the correct classes for padding right for the 4 unit 1`] = `
Array [
  "pr-4",
]
`;

exports[`padding pt Generates the correct classes for padding top for the 0 unit 1`] = `
Array [
  "pt-0",
]
`;

exports[`padding pt Generates the correct classes for padding top for the 1 unit 1`] = `
Array [
  "pt-1",
]
`;

exports[`padding pt Generates the correct classes for padding top for the 1/2 unit 1`] = `
Array [
  "pt-half",
]
`;

exports[`padding pt Generates the correct classes for padding top for the 1/4 unit 1`] = `
Array [
  "pt-quarter",
]
`;

exports[`padding pt Generates the correct classes for padding top for the 1/8 unit 1`] = `
Array [
  "pt-eighth",
]
`;

exports[`padding pt Generates the correct classes for padding top for the 2 unit 1`] = `
Array [
  "pt-2",
]
`;

exports[`padding pt Generates the correct classes for padding top for the 3 unit 1`] = `
Array [
  "pt-3",
]
`;

exports[`padding pt Generates the correct classes for padding top for the 4 unit 1`] = `
Array [
  "pt-4",
]
`;

exports[`padding px Generates the correct classes for padding x axis for the 0 unit 1`] = `
Array [
  "px-0",
]
`;

exports[`padding px Generates the correct classes for padding x axis for the 1 unit 1`] = `
Array [
  "px-1",
]
`;

exports[`padding px Generates the correct classes for padding x axis for the 1/2 unit 1`] = `
Array [
  "px-half",
]
`;

exports[`padding px Generates the correct classes for padding x axis for the 1/4 unit 1`] = `
Array [
  "px-quarter",
]
`;

exports[`padding px Generates the correct classes for padding x axis for the 1/8 unit 1`] = `
Array [
  "px-eighth",
]
`;

exports[`padding px Generates the correct classes for padding x axis for the 2 unit 1`] = `
Array [
  "px-2",
]
`;

exports[`padding px Generates the correct classes for padding x axis for the 3 unit 1`] = `
Array [
  "px-3",
]
`;

exports[`padding px Generates the correct classes for padding x axis for the 4 unit 1`] = `
Array [
  "px-4",
]
`;

exports[`padding py Generates the correct classes for padding y axis for the 0 unit 1`] = `
Array [
  "py-0",
]
`;

exports[`padding py Generates the correct classes for padding y axis for the 1 unit 1`] = `
Array [
  "py-1",
]
`;

exports[`padding py Generates the correct classes for padding y axis for the 1/2 unit 1`] = `
Array [
  "py-half",
]
`;

exports[`padding py Generates the correct classes for padding y axis for the 1/4 unit 1`] = `
Array [
  "py-quarter",
]
`;

exports[`padding py Generates the correct classes for padding y axis for the 1/8 unit 1`] = `
Array [
  "py-eighth",
]
`;

exports[`padding py Generates the correct classes for padding y axis for the 2 unit 1`] = `
Array [
  "py-2",
]
`;

exports[`padding py Generates the correct classes for padding y axis for the 3 unit 1`] = `
Array [
  "py-3",
]
`;

exports[`padding py Generates the correct classes for padding y axis for the 4 unit 1`] = `
Array [
  "py-4",
]
`;
